kubernetes/apps/gitlab/buildkitd/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/CiliumProject/cilium/main/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: buildkitd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: buildkitd
      app.kubernetes.io/instance: buildkitd
      app.kubernetes.io/name: buildkitd
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": gitlab-runner
      toPorts:
        - ports:
            - port: "1234"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: envoy-internal
            namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
